# gtd

./: README.md  cli.py  database.py  gtd.db  gui.py  main.py  mcp_server.py  models.py  notifications.py  pyproject.toml  requirements.txt  server.py  setup.sh  statusbar.py  utils.py
